Bachelorarbeit_HaiMy_Dao/kontaktbericht_swift_flutter/native_kontaktbericht/lib/native_kontaktbericht_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:native_kontaktbericht/kontaktbericht_logikkit')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> kb_extract_json(ffi.Pointer<ffi.Char> inputJson);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> kb_answer_followup_json(
  ffi.Pointer<ffi.Char> inputJson,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> kb_save_json(ffi.Pointer<ffi.Char> inputJson);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> kb_list_json();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> kb_delete_json(ffi.Pointer<ffi.Char> inputJson);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void kb_free(ffi.Pointer<ffi.Char> ptr);
